--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "create-db": "node scripts/create-database.js",
     "start": "node dist/app.js",
     "dev": "nodemon",
     "build": "tsc"
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.0",
+    "@types/pg": "^8.11.6",
     "@types/sequelize": "^4.28.20",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
